sys/sparc64/sparc64/machdep.c
@@ -1252,7 +1252,7 @@ name|phandle_t
 name|child
 decl_stmt|;
 name|uint32_t
-name|cpuid
+name|portid
 decl_stmt|;
 for|for
 control|(
@@ -1345,17 +1345,17 @@ name|OF_getprop
 argument_list|(
 name|node
 argument_list|,
-name|cpu_cpuid_prop
+name|cpu_portid_prop
 argument_list|(
 name|cpu_impl
 argument_list|)
 argument_list|,
 operator|&
-name|cpuid
+name|portid
 argument_list|,
 sizeof|sizeof
 argument_list|(
-name|cpuid
+name|portid
 argument_list|)
 argument_list|)
 operator|<=
@@ -1364,7 +1364,7 @@ condition|)
 continue|continue;
 if|if
 condition|(
-name|cpuid
+name|portid
 operator|==
 name|bspid
 condition|)
@@ -1387,7 +1387,7 @@ begin_function
 specifier|const
 name|char
 modifier|*
-name|cpu_cpuid_prop
+name|cpu_portid_prop
 parameter_list|(
 name|u_int
 name|cpu_impl
